[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/ItemRecipePanel.gd" type="Script" id=1]

[node name="ItemRecipePanel" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 23.0
margin_bottom = 10.0

[node name="FinishedItem" type="TextureButton" parent="HBoxContainer"]
margin_bottom = 3.0

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 4.0
margin_right = 8.0
margin_bottom = 3.0

[node name="Component1" type="TextureRect" parent="HBoxContainer"]
margin_left = 12.0
margin_right = 12.0
margin_bottom = 3.0

[node name="Component2" type="TextureRect" parent="HBoxContainer"]
margin_left = 16.0
margin_right = 16.0
margin_bottom = 3.0
